Fixes styling so there is no gap between collapsed column header and primary column (#314)
* Fixes styling so there is no gap between collapsed column header and primary column

* Removes the gap between the primary and secondary column when secondary column is collapsed

* fixes  conversion script missing 3070 layout conversion

* Fixes 7030 column gap

* PR fix to use grid-template-column instead of actual width and positioning

--- a/src/components/activity-page/section.scss
+++ b/src/components/activity-page/section.scss
@@ -43,6 +43,7 @@
   }
 
   &.r_4060 {
+    grid-template-columns: minmax(45px, auto) repeat(9, 1fr);
     .column.primary {
       grid-column: span 6;
       &.expand {
@@ -81,6 +82,7 @@
   }
 
   &.r_3070 {
+    grid-template-columns: minmax(45px, auto) repeat(9, 1fr);
     .column.primary {
       grid-column: span 7;
       &.expand {
